--- a/src/components/components.css
+++ b/src/components/components.css
@@ -36,17 +36,19 @@
     justify-content: center;
     width:60vw;
     height: 60%;
-    margin: 10% auto;
+    margin: auto;
+    margin-top:5%;
 }
 
 .germantown{
     background: #A9E0E0;
-    border-radius:76% 24% 43% 57% / 30% 36% 64% 70% 
+    border-radius:76% 24% 43% 57% / 30% 36% 64% 70% ;
 
 }
 .people{
     background: #D3EF5E;
     border-radius:75% 25% 43% 57% / 48% 62% 38% 52% ;
+    height:auto;
 
 
 }
@@ -59,7 +61,8 @@
 }
 
 .fridge p{
-    font-size: 2vmin;
+    font-size: 1.5vmin;
+  
 
 }
 
@@ -71,4 +74,30 @@
 .fridge h3{
     font-size: 1.2vw;
     color: #DD5B22;
+}
+
+.fridge span{
+    font-size:2vmin;
+}
+
+.columns{
+    /* border:solid; */
+    display:flex;
+    justify-content:center;
+    flex-direction:column;
+}
+
+.columns div{
+    display:flex;
+    flex-direction:columns;
+    /* border:solid; */
+    /* margin: 0 auto; */
+}
+
+.columns p{
+    font-size: 1.5vmin;
+    width:80%;
+    text-align:justify;
+    /* border:solid; */
+    padding:3%;
 }
