--- a/src/components/components.css
+++ b/src/components/components.css
@@ -235,7 +235,7 @@
 } */
 
 .profile-container{
-    border: solid;
+    /* border: solid; */
     /* height:98vh; */
     display: flex;
    /* place-items: center; */
@@ -249,7 +249,7 @@
     display: flex;
     flex-direction:column;
     place-items:center;
-    border:solid teal;
+    /* border:solid teal; */
     
 
 }
@@ -342,13 +342,13 @@
     border-radius: 65% 35% 74% 26% / 38% 22% 78% 62%  ;
     margin: 0 auto;
     padding: 4.2rem 4.2rem 4rem 2rem;
-    background-color: #7e9120;
+    background-color: #E0AFE2;
 }
 
 .yesno div:nth-child(2){
     border-radius:30% 70% 70% 30% / 30% 73% 27% 70%  ;
     height:100%;
-    background-color: #d9911e;
+    background-color: #A9E0E0;
 
 
 }
@@ -377,7 +377,7 @@
 
 .mission {
     margin: 3% auto;
-    border:solid;
+    /* border:solid; */
 }
 
 .mission p{
@@ -428,7 +428,7 @@
     /* margin: .5rem auto; */
     display:flex;
     flex-wrap:wrap;
-    border:solid;
+    /* border:solid; */
     flex-direction:row;
 
 }
